--- a/OpenGL Learning/OpenGL Learning.vcxproj.filters
+++ b/OpenGL Learning/OpenGL Learning.vcxproj.filters
@@ -71,6 +71,9 @@
     <ClInclude Include="Dependencies\include\glad\glad.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="src\Tree.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="res\shaders\default.vert" />
