--- a/OpenGL Learning/OpenGL Learning.vcxproj
+++ b/OpenGL Learning/OpenGL Learning.vcxproj
@@ -174,6 +174,7 @@
     <ClInclude Include="src\Renderer.h" />
     <ClInclude Include="src\Shader.h" />
     <ClInclude Include="src\Texture.h" />
+    <ClInclude Include="src\Tree.h" />
     <ClInclude Include="src\VertexArray.h" />
     <ClInclude Include="src\VertexBuffer.h" />
     <ClInclude Include="src\Window.h" />
